# texttools

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
docs/source/: conf.py  ejemplo.rst  index.rst  instalacion.rst
tests/: test_inference.py  test_models.py
texttools/: inference.py  models.py
texttools/model/: config.json  model.pkl  special_tokens_map.json  tokenizer.json  tokenizer.pkl  tokenizer_config.json
